[package]
edition = "2021"
name = "libsql"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
libsql = { version = "0.9.2", features = ["encryption"]  }
napi = { version = "2.12.2", default-features = false, features = ["napi5"] }
napi-derive = "2.12.2"
once_cell = "1.18.0"
serde_json = "1.0.140"
tokio = { version = "1.29.1", features = [ "rt-multi-thread" ] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
