[package]
edition = "2021"
name = "libsql"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
libsql = { version = "0.9.2", features = ["encryption"] }
napi = { version = "3.0.0-alpha.33", default-features = false, features = ["napi6"] }
napi-derive = "3.0.0-alpha.29"
once_cell = "1.18.0"
serde_json = "1.0.140"
tokio = { version = "1.29.1", features = [ "rt-multi-thread" ] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
